--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   font-size: 18px;
   font-family: 'Bai Jamjuree', sans-serif;
-  text-align: center;
+  /* text-align: center; */
 }
 
 h3 {
@@ -34,13 +34,20 @@ p {
   /* position: relative; */
 }
 .mid2{
-  /* position: relative; */
-  margin: 100px auto;
+  position: relative;
+  /* margin: 120px auto; */
 }
 .comp {
-  /* position: absolute; */
+  position: relative;
   display: inline-block;
-  float: left;
-  width: 400px;
-  /* left: 10px; */
+  width: 550px;
+  right: 40px;
+  margin-bottom: 50px;
+  margin-right: 70px;
+}
+.midtext{
+  display: inline-block;
+}
+.mid3 {
+  clear: both;
 }
