--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
   font-family: 'Bai Jamjuree', sans-serif;
   position: relative;
   margin: 0;
+  overflow-x: hidden;
   /* text-align: center; */
 }
 
