--- a/styles.css
+++ b/styles.css
@@ -86,29 +86,34 @@ p {
   /* position: relative; */
 }
 .mid2{
-  position: relative;
+  /* position: relative; */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 50px;
   /* margin: 120px auto; */
 }
 .comp {
   position: relative;
-  /* display: inline-block; */
   width: 700px;
-  right: 50px;
-  margin-right: 70px;
+  right: 70px;
+  /* margin-right: 70px; */
 }
-.midtext{
+/* .midtext{
   position: relative;
   width: 30%;
   bottom: 140px;
   display: inline-block;
   text-align: left;
-}
+} */
 .mid3 {
 
 }
 
 
 @media (max-width:550px) {
+  body{
+    overflow-x: hidden;
+  }
 
   .button1 {
     display: block;
@@ -121,12 +126,15 @@ p {
 
   .mid2{
     text-align: center;
+    display: grid;
+    grid-template-columns: auto;
   }
   .comp {
     position: static;
     display: block;
     margin: 10px auto;
-    width: 400px;
+    width: 300px;
+
   }
   .midtext{
     line-height: 1;
@@ -136,7 +144,6 @@ p {
     margin: 10px auto;
     text-align: center;
     bottom: auto;
-
   }
 
 
