--- a/styles.css
+++ b/styles.css
@@ -93,21 +93,27 @@ p {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 50px;
-  /* margin: 120px auto; */
+  margin: 50px auto 100px;
 }
 .comp {
   position: relative;
-  width: 700px;
+  width: 850px;
   right: 70px;
-  /* margin-right: 70px; */
 }
-/* .midtext{
+.midtext{
+  line-height: 2;
+  padding-top: 90px;
   position: relative;
-  width: 30%;
-  bottom: 140px;
-  display: inline-block;
+  width: 60%;
   text-align: left;
-} */
+}
+.midtext1{
+  margin: 5px auto 10px;
+}
+.midtext2{
+  margin: 0 auto 30px;
+}
+
 .mid3 {
 
 }
@@ -130,6 +136,19 @@ p {
     left: 0;
   }
 
+  /* top */
+  .headlogo {
+    display: block;
+    padding-top: 100px;
+    margin: 0 auto 10px;
+  }
+  .heading {
+    position: relative;
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+  }
+
   .button1 {
     display: block;
     margin: 10px auto;
@@ -139,23 +158,31 @@ p {
     margin: 10px auto;
   }
 
+  /* middle */
+  .mid1 {
+    text-align: center;
+    width: 80%;
+    margin: 100px auto;
+  }
+
   .mid2{
     text-align: center;
     display: grid;
     grid-template-columns: auto;
+    margin: 10px auto 50px;
   }
   .comp {
     position: static;
     display: block;
-    margin: 10px auto;
+    margin: auto;
     width: 300px;
   }
   .midtext{
-    line-height: 1;
     position: static;
     display: block;
     width: 55%;
-    margin: 10px auto;
+    margin: auto;
+    padding: inherit;
     text-align: center;
     bottom: auto;
   }
