--- a/styles.css
+++ b/styles.css
@@ -89,11 +89,11 @@ p {
   /* position: relative; */
 }
 .mid2{
-  /* position: relative; */
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
   grid-gap: 50px;
   margin: 50px auto 100px;
+
 }
 .comp {
   position: relative;
@@ -118,6 +118,63 @@ p {
 
 }
 
+@media (max-width:1190px) {
+
+  .mid2{
+    display: grid;
+    grid-template-columns: auto;
+    grid-gap: 50px;
+    margin: 50px auto 100px;
+
+  }
+
+  .comp {
+    position: static;
+    display: block;
+    width: 700px;
+    margin: 10px auto;
+  }
+
+  .midtext{
+    line-height: 2;
+    padding-top: 1px;
+    position: static;
+    display: block;
+    margin: 10px auto;
+    width: 60%;
+    text-align: center;
+  }
+
+}
+
+@media (max-width:880px) {
+
+  .mid2{
+    display: grid;
+    grid-template-columns: auto;
+    grid-gap: 50px;
+    margin: 50px auto 100px;
+
+  }
+
+  .comp {
+    position: static;
+    display: block;
+    width: 500px;
+    margin: 10px auto;
+  }
+
+  .midtext{
+    line-height: 2;
+    padding-top: 1px;
+    position: static;
+    display: block;
+    margin: 10px auto;
+    width: 60%;
+    text-align: center;
+  }
+
+}
 
 @media (max-width:550px) {
   body{
@@ -186,7 +243,5 @@ p {
     text-align: center;
     bottom: auto;
   }
-
-
 
 }
