--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 body {
+  line-height: 2;
   font-size: 18px;
   font-family: 'Bai Jamjuree', sans-serif;
   position: relative;
   margin: 0;
   overflow-x: hidden;
-  /* text-align: center; */
 }
 
 h3 {
@@ -14,23 +14,24 @@ h3 {
 }
 
 h4 {
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   color: hsl(210, 10%, 33%);
   text-align: center;
   font-weight: 600;
+  margin-bottom: 15px;
 }
 
 h5 {
+  margin-top: 20px;
+  margin-bottom: 10px;
   font-weight: 600;
-  font-size: 1.1rem;
-  /* text-align: center; */
+  font-size: 1.3rem;
   color: hsl(210, 10%, 33%);
 }
 
 p {
   font-size: 15px;
   color: hsl(201, 11%, 66%);
-  /* text-align: center; */
 }
 
 .bgdesk {
@@ -44,7 +45,6 @@ p {
 .buttons {
   margin: 20px auto;
   text-align: center;
-  /* border-radius: 50%; */
 }
 .button1 {
   background: hsl(171, 66%, 44%);
@@ -53,7 +53,6 @@ p {
   margin: 10px;
   color: white;
   border: 0;
-  box-shadow: 1px 1px 0.5px 1px hsl(171, 66%, 40%);
 }
 .button2 {
   background: hsl(233, 100%, 69%);
@@ -62,7 +61,6 @@ p {
   margin: 10px;
   color: white;
   border: 0;
-  box-shadow: 1px 1px 0.5px 1px hsl(233, 100%, 65%);
 }
 /* top */
 .head {
@@ -90,7 +88,7 @@ p {
 }
 .mid2{
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-gap: 50px;
   margin: 50px auto 100px;
 
@@ -101,7 +99,6 @@ p {
   right: 70px;
 }
 .midtext{
-  line-height: 2;
   padding-top: 90px;
   position: relative;
   width: 60%;
@@ -115,7 +112,90 @@ p {
 }
 
 .mid3 {
+  text-align: center;
+}
+.mid3txt {
+  width: 60%;
+  margin: 10px auto;
+}
+.devices {
+  display: block;
+  margin: 80px auto 10px;
+}
 
+.mid4 {
+  text-align: center;
+}
+
+.mid5 {
+  margin: 50px auto 100px;
+  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 10px;
+}
+.ico {
+  width: 70px;
+}
+.mid5txt {
+  width: 70%;
+  margin: 0 auto 10px;
+}
+
+.mid6 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  text-align: center;
+  margin: 50px auto 100px;
+}
+
+.ending {
+  text-align: center;
+  margin: 20px auto 30px;
+}
+.endtxt {
+  width: 45%;
+  margin: 10px auto;
+}
+
+/* footer */
+.footers {
+  margin-top: 100px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  background-color: hsl(200, 12%, 95%);
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.foot1 {
+  text-align: center;
+}
+.foot2{
+  align-self: center;
+  grid-gap: 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.foot3 {
+  align-self: center;
+  text-align: center;
+}
+.footerlogo{
+  width: 100px;
+}
+.social {
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+/* button */
+.button1:hover {
+  background-color: hsl(171, 66%, 50%);
+  box-shadow: 0 12px 12px 0 rgba(0,0,0,0.24), 0 17px 100px 2px rgba(0,0,0,0.19);
+}
+.button2:hover {
+  background-color: hsl(233, 100%, 75%);
+  box-shadow: 0 12px 12px 0 rgba(0,0,0,0.24), 0 20px 100px 2px rgba(0,0,0,0.19);
 }
 
 @media (max-width:1190px) {
@@ -127,22 +207,22 @@ p {
     margin: 50px auto 100px;
 
   }
-
   .comp {
     position: static;
     display: block;
     width: 700px;
     margin: 10px auto;
   }
-
   .midtext{
-    line-height: 2;
     padding-top: 1px;
     position: static;
     display: block;
     margin: 10px auto;
     width: 60%;
     text-align: center;
+  }
+  .devices {
+    width: 700px;
   }
 
 }
@@ -165,13 +245,16 @@ p {
   }
 
   .midtext{
-    line-height: 2;
     padding-top: 1px;
     position: static;
     display: block;
     margin: 10px auto;
     width: 60%;
     text-align: center;
+  }
+  .devices {
+    width: 500px;
+    margin: 70px auto 10px;
   }
 
 }
@@ -182,6 +265,11 @@ p {
     position: relative;
     text-align: center;
   }
+  h4 {
+    display: block;
+    margin: 10px auto;
+    width: 80%;
+  }
 
   .bgdesk{
     display: none;
@@ -191,6 +279,12 @@ p {
     position: absolute;
     top: 0;
     left: 0;
+  }
+  .button1 {
+    width: 300px;
+  }
+  .button2 {
+    width: 300px;
   }
 
   /* top */
@@ -242,6 +336,77 @@ p {
     padding: inherit;
     text-align: center;
     bottom: auto;
+  }
+  .midtext2 {
+    width: 90%;
+  }
+
+  .mid3txt {
+    width: 75%;
+  }
+
+  .devices {
+    width: 300px;
+    margin: 50px auto 10px;
+  }
+
+  .mid5 {
+    margin: 50px auto 100px;
+    text-align: center;
+    display: grid;
+    grid-template-columns: auto;
+    grid-gap: 10px;
+  }
+  .ico {
+    width: 50px;
+    margin: 20px auto 0;
+  }
+  .mid5txt {
+    width: 75%;
+    margin-bottom: 20px;
+  }
+
+  .mid6 {
+    display: grid;
+    grid-template-columns: auto;
+    grid-row-gap: 50px;
+    text-align: center;
+    margin: 50px auto 100px;
+  }
+
+  .endtxt {
+    width: 75%;
+  }
+
+  /* footer */
+  .footers {
+    margin-top: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: hsl(200, 12%, 95%);
+    display: grid;
+    grid-template-columns: auto;
+    grid-row-gap: 40px;
+  }
+  .foot1 {
+    text-align: center;
+  }
+  .foot2{
+    align-self: center;
+    grid-gap: 10px;
+    display: grid;
+    grid-template-columns: auto;
+  }
+  .foot3 {
+    align-self: center;
+    text-align: center;
+  }
+  .footerlogo{
+    width: 100px;
+  }
+  .social {
+    padding-left: 12px;
+    padding-right: 12px;
   }
 
 }
